--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial=scale=1">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/js/styling.js"></script>
     <title>{% block title %}{% endblock %} - Quizalicious</title>
   </head>
   <body>
