--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,17 +12,10 @@
     <div class="row">
       <div class="col-md-12">
         {% include 'header.html' %}
-        {% block header %}{% endblock %}
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-5">
-        {% block leftcol %}{% endblock %}
-      </div>
-      <div class="col-md-7">
-        {% block rightcol %}{% endblock %}
-      </div>
-    </div>
+      {% block header %}{% endblock %}
+      {% block leftcol %}{% endblock %}{% block rightcol %}{% endblock %}
     <div class="row">
       <div class="col-md-12">
         {% include 'footer.html' %}
