Create functionality to add new flashcards
Set up a template for adding new cards, added wtforms and created a form
for it, and created the view function to add the information to the
database.

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,6 +3,11 @@
     <div class="page-header">
       <h2><small>Quizalicious!</small></h2>
     </div>
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-info">
+      {{ message|safe }}
+    </div>
+    {% endfor %}
   </div>
 </div>
 {% block header %}{% endblock %}
